--- a/Reading/高性能Javascript/1.加载和执行/2.CSS阻塞.html
+++ b/Reading/高性能Javascript/1.加载和执行/2.CSS阻塞.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>css阻塞</title>
+    <title>Title</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script>
-        console.log('before css')
-        var startDate = new Date()
-    </script>
     <style>
         h1 {
-            color: red !important
+            color: red !important;
+        }
+
+        h2 {
+            color: blue !important;
         }
     </style>
     <script>
+        console.log('before css');
+        var startDate = new Date();
+    </script>
+    <script>
         function h() {
-            console.log(document.querySelectorAll('h1'))
+            console.log(document.querySelectorAll('h1'));// [h1]
+            console.log(document.querySelectorAll('h2'));// []
         }
 
-        setTimeout(h, 0)
+        setTimeout(h, 0);
     </script>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
+
 <h1>这是红色的</h1>
+
 <script>
     var endDate = new Date();
     console.log('after css');
     console.log('经过了' + (endDate - startDate) + 'ms');
 </script>
-<script>
-    //    css加载不会阻塞DOM树的解析
-    //    css加载会阻塞DOM树的渲染
-    //    css加载会阻塞后面js语句的执行、
 
-    //使用CDN(因为CDN会根据你的网络状况，替你挑选最近的一个具有缓存内容的节点为你提供资源，因此可以减少加载时间)
-    //对css进行压缩(可以用很多打包工具，比如webpack,gulp等，也可以通过开启gzip压缩)
-    //合理的使用缓存(设置cache-control,expires,以及E-tag都是不错的，不过要注意一个问题，就是文件更新后，你要避免缓存而带来的影响。其中一个解决防范是在文件名字后面加一个版本号)
-    //减少http请求数，将多个css文件合并，或者是干脆直接写成内联样式(内联样式的一个缺点就是不能缓存)
-</script>
+<h2>这是黑色的</h2>
+
 </body>
+<script>
+    //  Css加载不会阻塞Dom解析
+    //  Css加载会阻塞Dom渲染
+    //  Css加载会阻塞后面JavaScript语句的执行和JavaScript语句后面Html的渲染。
+
+    //  1.使用CDN(因为CDN会根据你的网络状况，替你挑选最近的一个具有缓存内容的节点为你提供资源，因此可以减少加载时间)
+    //  2.对css进行压缩(可以用很多打包工具，比如webpack,gulp等，也可以通过开启gzip压缩)
+    //  3.合理的使用缓存(设置cache-control,expires,以及E-tag都是不错的，
+    //      不过要注意一个问题，就是文件更新后，你要避免缓存而带来的影响。其中一个解决防范是在文件名字后面加一个版本号)
+    //  4.减少http请求数，将多个css文件合并，或者是干脆直接写成内联样式(内联样式的一个缺点就是不能缓存)
+</script>
 </html>
