--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        #div1{
+        #div1 {
             width: 300px;
             height: 500px;
             background: saddlebrown;
@@ -13,26 +13,26 @@
             flex-direction: column;
         }
 
-        #div3{
-            width: 100%;
-            height: 100%;
-            background: red;
-        }
+        /*#div3{*/
+        /*width: 100%;*/
+        /*height: 100%;*/
+        /*background: red;*/
+        /*}*/
 
-        .flex{
+        .flex {
             flex: 1;
         }
 
-        .red{
+        .red {
             background: red;
             height: 50px;
         }
 
-        .blue{
+        .blue {
             background: blue;
         }
 
-        .black{
+        .black {
             background: black;
         }
     </style>
@@ -40,15 +40,21 @@
 <body>
 
 <!--<div id="div1">-->
-    <!--<div class="red"></div>-->
-    <!--<div class="flex blue"></div>-->
+<!--<div class="red"></div>-->
+<!--<div class="flex blue"></div>-->
 <!--</div>-->
 
-<div id="div1">
-    <div id="div2">
-        <div id="div3"></div>
-    </div>
-</div>
+<!--<div id="div1">-->
+<!--<div id="div2">-->
+<!--<div id="div3"></div>-->
+<!--</div>-->
+<!--</div>-->
+
+<div id="div1"></div>
 
 </body>
+<script>
+    var dom = document.getElementById('div1');
+    dom.style.cssText = 'color:#000;background:red;';
+</script>
 </html>
