--- a/webBasic/flex/垂直居中.html
+++ b/webBasic/flex/垂直居中.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        #flex{
+        #flex {
             width: 100%;
             height: 500px;
-            display: flex;
-            align-items:center;
+            background: black;
+            /*display: flex;*/
+            /*align-items:center;*/
+            /*justify-content: center;*/
+            position: relative;
         }
 
         #div1 {
             width: 100px;
             height: 100px;
             background: red;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate3d(-50%, -50%, 0);
         }
 
         #div2 {
@@ -34,8 +41,8 @@
 
 <div id="flex">
     <div id="div1"></div>
-    <div id="div2"></div>
-    <div id="div3"></div>
+    <!--<div id="div2"></div>-->
+    <!--<div id="div3"></div>-->
 </div>
 
 </body>
