--- a/Reading/高性能Javascript/1.加载和执行/5.延迟脚本.html
+++ b/Reading/高性能Javascript/1.加载和执行/5.延迟脚本.html
@@ -8,8 +8,8 @@
             console.log('setTimeout');
         }, 0);
     </script>
-    <script async="async" src="async.js"></script>
-    <script defer="defer" src="defer.js"></script>
+    <script async="async" src="./js/async.js"></script>
+    <script defer="defer" src="./js/defer.js"></script>
     <script>
         window.onload = function () {
             console.log('onload');
