--- a/Reading/高性能Javascript/1.加载和执行/4.无阻塞脚本.html
+++ b/Reading/高性能Javascript/1.加载和执行/4.无阻塞脚本.html
@@ -11,7 +11,7 @@
     </style>
     <script>
         window.onload = function () {
-            console.log(a);
+            console.log('onload');
         };
     </script>
 </head>
@@ -24,5 +24,9 @@
 </body>
 <script>
     console.log(document.getElementById('p1'));
+
+    document.getElementById('p1').onclick = function () {
+        aaa;
+    };
 </script>
 </html>
