--- a/Reading/高性能JavaScript/1.加载和执行/3.script标签作用域.html
+++ b/Reading/高性能JavaScript/1.加载和执行/3.script标签作用域.html
@@ -7,19 +7,18 @@
 <body>
 
 </body>
-<!--<script>-->
-    <!--f();-->
-    <!--console.log(a);-->
+<script>
+    f();
+    console.log(a);
 
-    <!--function f() {-->
-        <!--console.log('f');-->
-    <!--}-->
-    <!--var a = 1;-->
+    function f() {
+        console.log('f');
+    }
+    var a = 1;
 
-    <!--f();-->
-    <!--console.log(a);-->
-    <!--console.log(b);-->
-<!--</script>-->
+    f();
+    console.log(a);
+</script>
 
 
 <!--<script>-->
