--- a/Reading/高性能Javascript/1.加载和执行/1.JavaScript阻塞.html
+++ b/Reading/高性能Javascript/1.加载和执行/1.JavaScript阻塞.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<!--当前Html碰到script标签的时候会停止环境中单线程上处理的事情（页面下载和渲染），
-    因为不知道JavaScript是否会给html增删改查内容，
+<!--当前html碰到script标签，浏览器会停止正在处理的事情（页面下载和渲染），
+    因为不知道javaScript是否会增删改查内容，
     必须等到脚本执行完成，然后再继续解析和渲染页面。
     所以要把script标签放在body标签后面-->
 
