--- a/Reading/高性能Javascript/1.加载和执行/4.无阻塞脚本.html
+++ b/Reading/高性能Javascript/1.加载和执行/4.无阻塞脚本.html
@@ -11,9 +11,19 @@
     </style>
     <script>
         window.onload = function () {
+            sadddasadsadsal
+
+
+            dsadsadasdsal
+            ds
+            asdadasdasdas
+            d
+            sadasdsa
             console.log('onload');
         };
     </script>
+    <script src="./js/onload.js"></script>
+    <script src="./js/onload2.js"></script>
 </head>
 <body>
 
@@ -24,9 +34,5 @@
 </body>
 <script>
     console.log(document.getElementById('p1'));
-
-    document.getElementById('p1').onclick = function () {
-        aaa;
-    };
 </script>
 </html>
