--- a/Reading/高性能Javascript/1.加载和执行/2.CSS阻塞.html
+++ b/Reading/高性能Javascript/1.加载和执行/2.CSS阻塞.html
@@ -40,9 +40,9 @@
 
 </body>
 <script>
-    //  Css加载不会阻塞Dom解析
-    //  Css加载会阻塞Dom渲染
-    //  Css加载会阻塞后面JavaScript语句的执行和JavaScript语句后面Html的渲染。
+    //  css加载不会阻塞dom解析
+    //  css加载会阻塞dom渲染
+    //  css加载会阻塞后面javaScript执行和javaScript后面dom的渲染。
 
     //  1.使用CDN(因为CDN会根据你的网络状况，替你挑选最近的一个具有缓存内容的节点为你提供资源，因此可以减少加载时间)
     //  2.对css进行压缩(可以用很多打包工具，比如webpack,gulp等，也可以通过开启gzip压缩)
