--- a/Reading/前端基础进阶/index.html
+++ b/Reading/前端基础进阶/index.html
@@ -7,8 +7,9 @@
 <body>
 
 </body>
+<script src="5.全方位解读this/1.this.js"></script>
 <!--<script src="13.Promise/1.ajax.js"></script>-->
 <!--<script src="13.Promise/2.Promise对象.js"></script>-->
 <!--<script src="13.Promise/3.Promise中的数据传递.js"></script>-->
-<script src="13.Promise/4.Promise.all.js"></script>
+<!--<script src="13.Promise/4.Promise.all.js"></script>-->
 </html>
