--- a/index.html
+++ b/index.html
@@ -3,58 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        #div1 {
-            width: 300px;
-            height: 500px;
-            background: saddlebrown;
-            overflow: scroll;
-            display: flex;
-            flex-direction: column;
-        }
-
-        /*#div3{*/
-        /*width: 100%;*/
-        /*height: 100%;*/
-        /*background: red;*/
-        /*}*/
-
-        .flex {
-            flex: 1;
-        }
-
-        .red {
-            background: red;
-            height: 50px;
-        }
-
-        .blue {
-            background: blue;
-        }
-
-        .black {
-            background: black;
-        }
-    </style>
 </head>
 <body>
 
-<!--<div id="div1">-->
-<!--<div class="red"></div>-->
-<!--<div class="flex blue"></div>-->
-<!--</div>-->
-
-<!--<div id="div1">-->
-<!--<div id="div2">-->
-<!--<div id="div3"></div>-->
-<!--</div>-->
-<!--</div>-->
-
-<div id="div1"></div>
+<ol>
+    <li>Object，Array原生方法</li>
+    <li>instanceof,constructor</li>
+    <li>String,new String</li>
+    <li>浏览器缓存</li>
+    <li>浏览器跨域</li>
+</ol>
 
 </body>
-<script>
-    var dom = document.getElementById('div1');
-    dom.style.cssText = 'color:#000;background:red;';
-</script>
 </html>
