--- a/Reading/高性能Javascript/1.加载和执行/3.script标签的作用域.html
+++ b/Reading/高性能Javascript/1.加载和执行/3.script标签的作用域.html
@@ -8,42 +8,42 @@
 
 </body>
 <!--<script>-->
-    <!--f();-->
-    <!--console.log(a);-->
+<!--f();-->
+<!--console.log(a);-->
 
-    <!--function f() {-->
-        <!--console.log('f');-->
-    <!--}-->
-    <!--var a = 1;-->
+<!--function f() {-->
+<!--console.log('f');-->
+<!--}-->
+<!--var a = 1;-->
 
-    <!--f();-->
-    <!--console.log(a);-->
-    <!--console.log(b);-->
+<!--f();-->
+<!--console.log(a);-->
+<!--console.log(b);-->
 <!--</script>-->
 
 
 <!--<script>-->
-    <!--function f() {-->
-        <!--console.log('f');-->
-    <!--}-->
-    <!--var a = 1;-->
+<!--function f() {-->
+<!--console.log('f');-->
+<!--}-->
+<!--var a = 1;-->
 <!--</script>-->
 <!--<script>-->
-    <!--f();-->
-    <!--console.log(a);-->
+<!--f();-->
+<!--console.log(a);-->
 <!--</script>-->
 <!--<script>-->
-    <!--function f() {-->
-        <!--console.log('f');-->
-    <!--}-->
-    <!--var a = 1;-->
+<!--function f() {-->
+<!--console.log('f');-->
+<!--}-->
+<!--var a = 1;-->
 <!--</script>-->
 
 
 <!--<script src="./js/one.js"></script>-->
 <!--<script>-->
-    <!--f();-->
-    <!--console.log(a);-->
+<!--f();-->
+<!--console.log(a);-->
 <!--</script>-->
 <!--<script src="./js/one.js"></script>-->
 
@@ -51,4 +51,22 @@
 <!--<script src="./js/one.js"></script>-->
 <!--<script src="./js/two.js"></script>-->
 <!--<script src="./js/one.js"></script>-->
+
+<script>
+    // Q:
+    console.log(this === window);
+</script>
+<script>
+    'use strict';
+    console.log(this === window);
+</script>
+<script>
+    (function () {
+        'use strict';
+        console.log(this === window);
+    })();
+</script>
+<script>
+    console.log(this === window);
+</script>
 </html>
