--- a/坑/CSS/加载空css.html
+++ b/坑/CSS/加载空css.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
 </body>
-<script src="./test.js"></script>
 </html>
