--- a/Reading/JavaScript填坑史/index.html
+++ b/Reading/JavaScript填坑史/index.html
@@ -7,7 +7,5 @@
 <body>
 
 </body>
-<!--<script src="1.setTimeout和setInterval深入理解.js"></script>-->
-<!--<script src="2.闭包初探小题.js"></script>-->
-<!--<script src="3.map.js"></script>-->
+<script src="2.闭包/3.js"></script>
 </html>
