--- a/demo-Vue/copy.html
+++ b/demo-Vue/copy.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
 </head>
 <body>
 
 </body>
+<script>
+
+</script>
 </html>
