学习设计模式

--- a/Reading/JavaScript设计模式与开发实践/2.this_call_apply/2.1.1.2.作为普通函数调用.html
+++ b/Reading/JavaScript设计模式与开发实践/2.this_call_apply/2.1.1.2.作为普通函数调用.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+<button id="btn">button</button>
+
 </body>
 <script>
     /**
@@ -22,5 +24,16 @@
     };
     var getName = myObject.getName;
     console.log(getName());
+
+    var id = 'globalId';
+    document.getElementById('btn').onclick = function () {
+        console.log(this.id);
+        var callback = function () {
+            console.log(this.id);
+        };
+        callback();
+//        callback.call(this);
+//        callback.apply(this);
+    }
 </script>
 </html>
