--- a/Reading/JavaScript设计模式与开发实践/2.this_call_apply/2.1.2.丢失的this.html
+++ b/Reading/JavaScript设计模式与开发实践/2.this_call_apply/2.1.2.丢失的this.html
@@ -13,12 +13,8 @@
      */
     'use strict';
 
-    var div = document.getElementById('div1');
-    console.log(div);
-
-    //    var docGetId = document.getElementById;
-    //    div = docGetId('div1');
-    //    console.log(div);
+    var docGetId = document.getElementById;
+    console.log(docGetId('div1'));
 
     //    document.getElementById = (function (func) {
     //        return function () {
