--- a/Reading/JavaScript闯关记/2.初探/1.script元素.html
+++ b/Reading/JavaScript闯关记/2.初探/1.script元素.html
@@ -5,9 +5,9 @@
     <title>Title</title>
     <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <script>
+        // 按照惯例，所有的 <script> 元素都应该放在页面的 <head> 元素中，
         // 可是这种做法意味着必须等到全部 JavaScript 代码都被下载、解析和执行完成之后，才能开始呈现页面的内容
         // （浏览器在遇到 <body> 元素时才开始呈现内容）。
-
         // 对于那些需要加载很多 JavaScript 代码的页面来说，会导致页面出现明显的延迟（浏览器窗口一片空白）。
         // 为了避免这个问题，最好的做法是把 <script> 元素放到 HTML 文档的最后面，</body> 元素之前
         // <script> 元素都会按照他们在页面中出现的先后顺序依次被解析。
@@ -20,9 +20,13 @@
     // 在 HTML5 规范中，<script> 的 type 属性默认是 "text/javascript"，所以可以省略；
     // 但是在 HTML 4.01 和 XHTML 1.0 规范中，type 属性是必须的。
 </script>
+<script>
+    // 包含在 <script> 元素内部的 JavaScript 代码将被从上至下依次解释，
+    // 在解释器对 <script> 元素内部的所有代码求值完毕之前，页面中的其余内容都不会被浏览器加载或显示。
+</script>
 <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js">
-    // 带有 src 属性的 <script> 元素不应该之间再包含额外的 JavaScript 代码。
+    // 需要注意的是，带有 src 属性的 <script> 元素不应该之间再包含额外的 JavaScript 代码。
     // 如果包含了嵌入的代码，则只会下载并执行外部脚本文件，嵌入的代码会被忽略。
-    console.log('x'); // 永远不会执行
+    console.log('x');
 </script>
 </html>
