--- a/Reading/JavaScript闯关记/3.语法/1.语法.html
+++ b/Reading/JavaScript闯关记/3.语法/1.语法.html
@@ -17,14 +17,24 @@
 
 </body>
 <script>
+    // 字符集
+    // JavaScript 程序是用 Unicode 字符集编写的，Unicode 是 ASCII 和 Latin-1 的超集，并支持地球上几乎所有在用的语言。
+
     // 区分大小写
     // JavaScript 是区分大小写的。也就是说，关键字、变量、函数名和所有的标识符（identifier）都必须采取一致的大小写形式。
     // 比如，关键字 while 必须写成 while，而不能写成 While 或者 WHILE。同样，online、Online、OnLine、ONLINE 是4个不同的变量名。
-
     // HTML 并不区分大小写。由于它和客户端 JavaScript 联系紧密，因此这点区别很容易混淆。
     // 许多客户端 JavaScript 对象和属性与他们所表示的 HTML 标签和属性名相同。
     // 在 HTML 中，这些标签和属性名可以使用大写也可以是小写，而在 JavaScript 中则必须是小写。
     // 例如，在 HTML 中设置事件处理程序时，onclick 属性可以写成 onClick，但在 JavaScript 代码中，必须使用小写的 onclick。
+
+    // 注释
+    // JavaScript 使用 C 风格的注释，包括单行注释和块级注释。
+    // 单行注释以两个斜杠 // 开头，块级注释以一个斜杠和一个星号 /* 开头，以一个星号和一个斜杠 */ 结尾
+
+    // 字面量
+    // JavaScript 中的字面量有：字符串、数字、布尔值、对象、数组、函数、正则表达式，以及特殊的 null 值。
+    // undefined不是字面量
 
     // 严格模式
     // 在 ECMAScript 5 引入了严格模式（strict mode）的概念。严格模式是为 JavaScript 定义了一种不同的解析与执行模式。
@@ -39,13 +49,16 @@
 
     // 标识符
     // 所谓标识符，就是指变量、函数、属性的名字，或者函数的参数。
-    // JavaScript 标识符必须以字母、下划线（_）或美元符号（$）开始，后续的字符可以是字母、数字、下划线或美元符号（数字是不允许作为首字符出现的）。
+    // JavaScript 标识符必须以字母、下划线（_）或美元符号（$）开始，
+    // 后续的字符可以是字母、数字、下划线或美元符号（数字是不允许作为首字符出现的）。
 
     // 关键字和保留字
     // ECMAScript 3 描述了一组具有特定用途的关键字，这些关键字可用于表示控制语句的开始或结束，或者用于执行特定操作等。
     // 按照规则，关键字是语言保留的，不能用作标识符。
 
     // 可选的分号
+    // 和其他许多编程语言一样，JavaScript 使用分号（;）将语句分隔开。
+    // 这对增强代码的可读性和整洁性是非常重要的。缺少分隔符，一条语句的结束就成了下一条语句的开始，反之亦然。
     var sum = a + b     // 即使没有分号也是有效的语句，不好的写法
     var diff = a - b;   // 有效的语句，好的写法
 </script>
