--- a/watch/cookie-session-token/index.html
+++ b/watch/cookie-session-token/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 
-<form method="post" action="/login">
-    用户<input type="text" name="username">
-    密码<input type="password" name="password">
-    <button>登录</button>
+<form action="/login" method="post">
+    <input type="text" name="username" placeholder="请输入用户名">
+    <input type="password" name="password" placeholder="请输入密码">
+    <input type="submit"/>
+    <input type="reset"/>
 </form>
 
 </body>
