--- a/watch/index.html
+++ b/watch/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Watch-List</title>
 </head>
 <body>
 
-<a href="https://www.bilibili.com/video/BV1Kt411w7MP?spm_id_from=333.1007.top_right_bar_window_custom_collection.content.click" target="_blank">2019全新javaScript进阶面向对象ES6</a><br/>
-<a href="https://www.bilibili.com/video/BV1ob4y1Y7Ep?spm_id_from=333.788.top_right_bar_window_history.content.click" target="_blank">cookie-session-token</a><br/>
+<a href="https://www.bilibili.com/video/BV1Kt411w7MP?p=62&spm_id_from=pageDriver&vd_source=5639c463b05d919829e5f23ed6e161c1" target="_blank">2019全新javaScript进阶面向对象ES6</a> 62/122（11~22 20~23 58）<br/>
+<a href="https://www.bilibili.com/video/BV1Zr4y1W7ww" target="_blank">算法与数据结构入门篇</a> 2/52<br/>
+<a href="https://www.bilibili.com/video/BV1Ei4y1o7jK" target="_blank">cross-domain</a> done<br/>
+<a href="https://www.bilibili.com/video/BV1SL4y1i7ZL" target="_blank">cookie</a> done<br/>
+<a href="https://www.bilibili.com/video/BV1ob4y1Y7Ep" target="_blank">cookie-session-token</a> done<br/>
+<a href="https://www.bilibili.com/video/BV1Xq4y1H7y7" target="_blank">深拷贝和浅拷贝的区别</a><br/>
+<a href="https://www.bilibili.com/video/BV1RR4y1p7my" target="_blank">手写Promise核心代码</a><br/>
+<a href="https://www.bilibili.com/video/BV1eQ4y1d7mE" target="_blank">宏任务与微任务</a><br/>
+<a href="https://www.bilibili.com/video/BV1XP4y1A7Ui" target="_blank">RSA加密和解密</a><br/>
 
 </body>
 </html>
