--- a/gp.html
+++ b/gp.html
@@ -39,7 +39,6 @@
             margin-bottom: 15px;
         }
     </style>
-    <!--<script src="vue.js"></script>-->
     <script src="https://cdn.bootcss.com/vue/2.6.11/vue.min.js"></script>
 </head>
 <body>
@@ -138,9 +137,9 @@
       tPrice: '',
       gpList: [
         {
-          name: '空港股份',
-          buyPrice: 361.656,
-          buyNumber: 100
+          name: '初灵信息',
+          buyPrice: 16.68,
+          buyNumber: 14100
         },
       ]
     },
