mission-qkl添加图片懒加载

--- a/css/渐变.html
+++ b/css/渐变.html
@@ -11,6 +11,10 @@
       background-image: linear-gradient(135deg, #184352 0%, #101313 100%);
     }
 
+    html [lazy] {
+      color: #0a6cd6;
+    }
+
     .div2 {
       width: 200px;
       height: 200px;
@@ -20,7 +24,7 @@
 </head>
 <body>
 
-<div class="div1"></div>
+<div class="div1" lazy>lazy</div>
 
 <div class="div2"></div>
 
