联调完毕：用户管理

--- a/gp.html
+++ b/gp.html
@@ -137,9 +137,9 @@
       tPrice: '',
       gpList: [
         {
-          name: '初灵信息',
-          buyPrice: 16.68,
-          buyNumber: 14100
+          name: '创意信息',
+          buyPrice: 21.15,
+          buyNumber: 5600
         },
       ]
     },
