--- a/gp.html
+++ b/gp.html
@@ -135,6 +135,13 @@
         }
       ],
       targetList: [
+        '中科信息',
+        '华民股份',
+        '中文在线',
+        '博雅生物',
+        '方正科技',
+      ],
+      myList: [
         '华民股份',
         '中科信息',
         '博雅生物',
