联调完毕：用户管理

--- a/gp.html
+++ b/gp.html
@@ -142,21 +142,21 @@
       myList: [
         '华民股份',
         '创意信息',
-        '中科信息',
         '博雅生物',
+        '中科信息',
         '中文在线',
         '方正科技',
         //
         '铜牛信息',
-        '空港股份',
         '初灵信息',
-        '康达新材',
-        '星微股份',
         '首都在线',
-        '中能电气',
+        '康达新材',
+        '空港股份',
+        // '星微股份',
+        // '中能电气',
         //
         '北汽蓝谷',
-        '恒辉安防',
+        // '恒辉安防',
         '沃森生物',
       ]
     },
