--- a/gp.html
+++ b/gp.html
@@ -51,7 +51,7 @@
   <div>MakeMoney:{{makeMoney}}</div>
   <div>MakeTotalPrice:{{makeTotalPrice}}</div>
   <p v-for="(target,index) in myList">
-    {{index+1}}.{{target}}:{{makeTotalPrice * Math.pow(1.2, index + 1)}}
+    {{index + 1}}.{{target}}:{{makeTotalPrice * Math.pow(1.2, index + 1)}}，{{makeTotalPrice * Math.pow(1.2, index + 1) - makeTotalPrice * Math.pow(1.2, index)}}
   </p>
 </div>
 
@@ -111,270 +111,264 @@
 </body>
 <script>
   new Vue({
-    el: '#app',
+    el: "#app",
     data: {
-      gp_select_key: '',
-      strategy_select_key: '',
-      all_mine: '',
-      buyPrice: '',
-      buyNumber: '',
-      addPrice: '',
-      addNumber: '',
-      addTotalPrice: '',
-      totalPrice: '',
-      totalNumber: '',
-      eachPrice: '',
-      targetPrice: '',
-      makeMoney: '',
-      tPrice: '',
+      gp_select_key: "",
+      strategy_select_key: "",
+      all_mine: "",
+      buyPrice: "",
+      buyNumber: "",
+      addPrice: "",
+      addNumber: "",
+      addTotalPrice: "",
+      totalPrice: "",
+      totalNumber: "",
+      eachPrice: "",
+      targetPrice: "",
+      makeMoney: "",
+      tPrice: "",
       gpList: [
-        // {
-        //   name: '创意信息',
-        //   buyPrice: 14.07,
-        //   buyNumber: 37200
-        // },
         {
-          name: '华体科技',
-          buyPrice: 19.4,
-          buyNumber: 26900
+          name: "中科信息",
+          buyPrice: 29.5,
+          buyNumber: 12400
         }
       ],
       myList: [
-        '华民股份',
-        '创意信息',
-        '博雅生物',
-        '中科信息',
-        '中文在线',
-        '方正科技',
-        //
-        '铜牛信息',
-        '初灵信息',
-        '首都在线',
-        '康达新材',
-        '空港股份',
+        "铜牛信息",
+        "博雅生物",
+        "中文在线",
+        "华民股份",
+        "初灵信息",
+        "首都在线",
+        "创意信息",
+        // "方正科技",
+        // "空港股份",
+        // "康达新材"
         // '星微股份',
         // '中能电气',
         //
-        '北汽蓝谷',
+        // '华体科技',
+        // '北汽蓝谷',
         // '恒辉安防',
-        '沃森生物',
+        // '沃森生物',
       ]
     },
     created() {
-      this.gp_select_key = this.gpList[0].name
+      this.gp_select_key = this.gpList[0].name;
     },
     computed: {
       makeTotalPrice() {
         if (this.makeMoney && this.totalPrice) {
-          return (+this.makeMoney + +this.totalPrice).toFixed(3)
+          return (+this.makeMoney + +this.totalPrice).toFixed(3);
         }
       },
       percentagePrice() {
         if (this.targetPrice && this.eachPrice) {
-          return ((this.targetPrice / this.eachPrice - 1) * 100).toFixed(3) + '%'
+          return ((this.targetPrice / this.eachPrice - 1) * 100).toFixed(3) + "%";
         }
       }
     },
     watch: {
       gp_select_key: function (val, oldVal) {
-        let search
+        let search;
         for (let i = 0; i < this.gpList.length; i++) {
           if (this.gpList[i].name === val) {
-            search = this.gpList[i]
-            break
+            search = this.gpList[i];
+            break;
           }
         }
-        this.eachPrice = this.buyPrice = search.buyPrice
-        this.totalNumber = this.buyNumber = search.buyNumber
-        this.totalPrice = (this.buyPrice * this.buyNumber).toFixed(3)
-        this.makeMoney = this.targetPrice = this.addTotalPrice = this.addNumber = this.addPrice = ''
-        this.tPriceMake = search.tPrice * search.buyNumber
+        this.eachPrice = this.buyPrice = search.buyPrice;
+        this.totalNumber = this.buyNumber = search.buyNumber;
+        this.totalPrice = (this.buyPrice * this.buyNumber).toFixed(3);
+        this.makeMoney = this.targetPrice = this.addTotalPrice = this.addNumber = this.addPrice = "";
+        this.tPriceMake = search.tPrice * search.buyNumber;
       },
       addPrice: function (val, oldVal) {
         if (val) {
           if (this.addNumber) {
-            this.addTotalPrice = val * +this.addNumber
-            this.totalNumber = this.buyNumber + +this.addNumber
-            this.totalPrice = (this.buyPrice * this.buyNumber + this.addTotalPrice).toFixed(3)
-            this.eachPrice = (this.totalPrice / this.totalNumber).toFixed(3)
+            this.addTotalPrice = val * +this.addNumber;
+            this.totalNumber = this.buyNumber + +this.addNumber;
+            this.totalPrice = (this.buyPrice * this.buyNumber + this.addTotalPrice).toFixed(3);
+            this.eachPrice = (this.totalPrice / this.totalNumber).toFixed(3);
             if (this.targetPrice) {
-              this.makeMoney = ((+this.targetPrice - this.eachPrice) * this.totalNumber).toFixed(3)
+              this.makeMoney = ((+this.targetPrice - this.eachPrice) * this.totalNumber).toFixed(3);
             }
           }
         } else {
-          this.addTotalPrice = ''
-          this.totalNumber = this.buyNumber
-          this.totalPrice = this.buyPrice * this.buyNumber
-          this.eachPrice = this.buyPrice.toFixed(3)
+          this.addTotalPrice = "";
+          this.totalNumber = this.buyNumber;
+          this.totalPrice = this.buyPrice * this.buyNumber;
+          this.eachPrice = this.buyPrice.toFixed(3);
           if (this.targetPrice) {
-            this.makeMoney = ((this.targetPrice - this.eachPrice) * this.totalNumber).toFixed(3)
+            this.makeMoney = ((this.targetPrice - this.eachPrice) * this.totalNumber).toFixed(3);
           }
         }
       },
       addNumber: function (val, oldVal) {
         if (val) {
-          this.totalNumber = +val + this.buyNumber
+          this.totalNumber = +val + this.buyNumber;
           if (this.addPrice) {
-            this.addTotalPrice = val * this.addPrice
-            this.totalPrice = this.buyPrice * this.buyNumber + this.addTotalPrice
-            this.eachPrice = (this.totalPrice / this.totalNumber).toFixed(3)
+            this.addTotalPrice = val * this.addPrice;
+            this.totalPrice = this.buyPrice * this.buyNumber + this.addTotalPrice;
+            this.eachPrice = (this.totalPrice / this.totalNumber).toFixed(3);
             if (this.targetPrice) {
-              this.makeMoney = ((this.targetPrice - this.eachPrice) * this.totalNumber).toFixed(3)
+              this.makeMoney = ((this.targetPrice - this.eachPrice) * this.totalNumber).toFixed(3);
             }
           }
         } else {
-          this.addTotalPrice = ''
-          this.totalNumber = this.buyNumber
-          this.totalPrice = this.buyPrice * this.buyNumber
-          this.eachPrice = this.buyPrice.toFixed(3)
+          this.addTotalPrice = "";
+          this.totalNumber = this.buyNumber;
+          this.totalPrice = this.buyPrice * this.buyNumber;
+          this.eachPrice = this.buyPrice.toFixed(3);
         }
       },
       targetPrice: function (val, oldVal) {
         if (this.eachPrice && this.totalNumber) {
-          this.makeMoney = ((val - this.eachPrice) * this.totalNumber).toFixed(3)
+          this.makeMoney = ((val - this.eachPrice) * this.totalNumber).toFixed(3);
         }
       }
     }
-  })
+  });
 
   new Vue({
-    el: '#app2',
+    el: "#app2",
     data: {
-      price: '',
-      targetPrice: ''
+      price: "",
+      targetPrice: ""
     },
     computed: {
       percentage() {
-        return (this.targetPrice / this.price - 1) * 100
+        return (this.targetPrice / this.price - 1) * 100;
       }
     }
-  })
+  });
 
   new Vue({
-    el: '#app3',
+    el: "#app3",
     data: {
-      price: '',
-      targetPrice: ''
+      price: "",
+      targetPrice: ""
     },
     computed: {
       percentage() {
-        return (this.targetPrice / this.price - 1) * 100
+        return (this.targetPrice / this.price - 1) * 100;
       }
     }
-  })
+  });
 
   new Vue({
-    el: '#app4',
+    el: "#app4",
     data: {
-      price: ''
+      price: ""
     },
     computed: {
       targetPrice1() {
-        return (this.price * 1.05).toFixed(3)
+        return (this.price * 1.05).toFixed(3);
       },
       targetPrice2() {
-        return (this.price * 1.07).toFixed(3)
+        return (this.price * 1.07).toFixed(3);
       },
       targetPrice3() {
-        return (this.price * 1.1).toFixed(3)
+        return (this.price * 1.1).toFixed(3);
       },
       targetPrice4() {
-        return (this.price * 0.93).toFixed(3)
+        return (this.price * 0.93).toFixed(3);
       },
       targetPrice5() {
-        return (this.price * 0.9).toFixed(3)
+        return (this.price * 0.9).toFixed(3);
       },
       targetPrice6() {
-        return (this.price * 1.03).toFixed(3)
+        return (this.price * 1.03).toFixed(3);
       },
       targetPrice7() {
-        return (this.price * 1.21).toFixed(3)
+        return (this.price * 1.21).toFixed(3);
       },
       targetPrice8() {
-        return (this.price * 1.15).toFixed(3)
+        return (this.price * 1.15).toFixed(3);
       },
       targetPrice9() {
-        return (this.price * 1.30).toFixed(3)
+        return (this.price * 1.30).toFixed(3);
       },
       targetPrice10() {
-        return (this.price * 1.331).toFixed(3)
+        return (this.price * 1.331).toFixed(3);
       },
       targetPrice11() {
-        return (this.price * 1.20).toFixed(3)
+        return (this.price * 1.20).toFixed(3);
       },
       targetPrice12() {
-        return (this.price * 0.97).toFixed(3)
+        return (this.price * 0.97).toFixed(3);
       },
       targetPrice13() {
-        return (this.price * 0.95).toFixed(3)
+        return (this.price * 0.95).toFixed(3);
       },
       targetPrice14() {
-        return (this.price * 1.14).toFixed(3)
+        return (this.price * 1.14).toFixed(3);
       },
       targetPrice15() {
-        return (this.price * 1.04).toFixed(3)
+        return (this.price * 1.04).toFixed(3);
       },
       targetPrice16() {
-        return (this.price * 0.96).toFixed(3)
+        return (this.price * 0.96).toFixed(3);
       }
     }
-  })
+  });
 
   new Vue({
-    el: '#app5',
+    el: "#app5",
     data: {
-      price: ''
+      price: ""
     },
     computed: {
       targetPrice1() {
-        return (this.price * 1.05).toFixed(3)
+        return (this.price * 1.05).toFixed(3);
       },
       targetPrice2() {
-        return (this.price * 1.07).toFixed(3)
+        return (this.price * 1.07).toFixed(3);
       },
       targetPrice3() {
-        return (this.price * 1.1).toFixed(3)
+        return (this.price * 1.1).toFixed(3);
       },
       targetPrice4() {
-        return (this.price * 0.93).toFixed(3)
+        return (this.price * 0.93).toFixed(3);
       },
       targetPrice5() {
-        return (this.price * 0.9).toFixed(3)
+        return (this.price * 0.9).toFixed(3);
       },
       targetPrice6() {
-        return (this.price * 1.03).toFixed(3)
+        return (this.price * 1.03).toFixed(3);
       },
       targetPrice7() {
-        return (this.price * 1.21).toFixed(3)
+        return (this.price * 1.21).toFixed(3);
       },
       targetPrice8() {
-        return (this.price * 1.15).toFixed(3)
+        return (this.price * 1.15).toFixed(3);
       },
       targetPrice9() {
-        return (this.price * 1.30).toFixed(3)
+        return (this.price * 1.30).toFixed(3);
       },
       targetPrice10() {
-        return (this.price * 1.331).toFixed(3)
+        return (this.price * 1.331).toFixed(3);
       },
       targetPrice11() {
-        return (this.price * 1.20).toFixed(3)
+        return (this.price * 1.20).toFixed(3);
       },
       targetPrice12() {
-        return (this.price * 0.97).toFixed(3)
+        return (this.price * 0.97).toFixed(3);
       },
       targetPrice13() {
-        return (this.price * 0.95).toFixed(3)
+        return (this.price * 0.95).toFixed(3);
       },
       targetPrice14() {
-        return (this.price * 1.14).toFixed(3)
+        return (this.price * 1.14).toFixed(3);
       },
       targetPrice15() {
-        return (this.price * 1.04).toFixed(3)
+        return (this.price * 1.04).toFixed(3);
       },
       targetPrice16() {
-        return (this.price * 0.96).toFixed(3)
+        return (this.price * 0.96).toFixed(3);
       }
     }
-  })
+  });
 </script>
 </html>
