--- a/gp.html
+++ b/gp.html
@@ -142,16 +142,16 @@
         "初灵信息",
         "首都在线",
         "创意信息",
-        // "方正科技",
-        // "空港股份",
-        // "康达新材"
+        "方正科技",
+        "空港股份",
+        "康达新材"
         // '星微股份',
         // '中能电气',
         //
-        // '华体科技',
         // '北汽蓝谷',
         // '恒辉安防',
         // '沃森生物',
+        // '华体科技',
       ]
     },
     created() {
