--- a/gp.html
+++ b/gp.html
@@ -129,9 +129,9 @@
       tPrice: "",
       gpList: [
         {
-          name: "中科信息",
-          buyPrice: 29.5,
-          buyNumber: 12400
+          name: "创意信息",
+          buyPrice: 12.28,
+          buyNumber: 41900
         }
       ],
       myList: [
@@ -141,7 +141,6 @@
         "华民股份",
         "初灵信息",
         "首都在线",
-        "创意信息",
         "方正科技",
         "空港股份",
         "康达新材"
