--- a/gp.html
+++ b/gp.html
@@ -129,9 +129,9 @@
       tPrice: "",
       gpList: [
         {
-          name: "创意信息",
-          buyPrice: 12.28,
-          buyNumber: 41900
+          name: "星微股份",
+          buyPrice: 5.162,
+          buyNumber: 96800
         }
       ],
       myList: [
@@ -141,12 +141,11 @@
         "华民股份",
         "初灵信息",
         "首都在线",
+        "创意信息",
         "方正科技",
         "空港股份",
         "康达新材"
-        // '星微股份',
         // '中能电气',
-        //
         // '北汽蓝谷',
         // '恒辉安防',
         // '沃森生物',
