--- a/gp.html
+++ b/gp.html
@@ -136,15 +136,15 @@
       ],
       myList: [
         "铜牛信息",
-        "博雅生物",
         "中文在线",
-        "华民股份",
         "初灵信息",
         "首都在线",
-        "创意信息",
         "方正科技",
-        "空港股份",
-        "康达新材"
+        "创意信息",
+        "博雅生物",
+        // "中能电气",
+        // "空港股份",
+        // "康达新材"
         // '中能电气',
         // '北汽蓝谷',
         // '恒辉安防',
