--- a/gp.html
+++ b/gp.html
@@ -141,12 +141,12 @@
         "首都在线",
         "方正科技",
         "创意信息",
+        "中能电气",
+        "华民股份",
         "博雅生物",
-        // "中能电气",
+        "北汽蓝谷",
         // "空港股份",
         // "康达新材"
-        // '中能电气',
-        // '北汽蓝谷',
         // '恒辉安防',
         // '沃森生物',
         // '华体科技',
