修复bug：小程序-物流管理

--- a/gp.html
+++ b/gp.html
@@ -129,24 +129,24 @@
       tPrice: "",
       gpList: [
         {
-          name: "星微股份",
-          buyPrice: 5.162,
-          buyNumber: 96800
+          name: "首都在线",
+          buyPrice: 15.251,
+          buyNumber: 34100
         }
       ],
       myList: [
         "铜牛信息",
         "中文在线",
         "初灵信息",
-        "首都在线",
         "方正科技",
         "创意信息",
         "中能电气",
         "华民股份",
         "博雅生物",
-        "北汽蓝谷",
-        // "空港股份",
-        // "康达新材"
+        "空港股份",
+        "康达新材",
+        // '星微股份',
+        // "北汽蓝谷",
         // '恒辉安防',
         // '沃森生物',
         // '华体科技',
