--- a/gp.html
+++ b/gp.html
@@ -129,24 +129,24 @@
       tPrice: "",
       gpList: [
         {
-          name: "首都在线",
-          buyPrice: 15.251,
-          buyNumber: 34100
+          name: "铜牛信息",
+          buyPrice: 35.58,
+          buyNumber: 13300
         }
       ],
       myList: [
-        "铜牛信息",
         "中文在线",
         "初灵信息",
-        "方正科技",
+        "首都在线",
         "创意信息",
-        "中能电气",
-        "华民股份",
         "博雅生物",
+        "华民股份",
+        "中能电气",
+        "方正科技",
         "空港股份",
         "康达新材",
-        // '星微股份',
         // "北汽蓝谷",
+        // '星微股份',
         // '恒辉安防',
         // '沃森生物',
         // '华体科技',
