上传组件支持非图片文件

--- a/gp.html
+++ b/gp.html
@@ -136,13 +136,13 @@
       ],
       myList: [
         "中文在线",
-        "初灵信息",
+        // "初灵信息",
         "首都在线",
-        "创意信息",
+        // "创意信息",
         "博雅生物",
-        "华民股份",
-        "中能电气",
-        "方正科技",
+        // "华民股份",
+        // "中能电气",
+        // "方正科技",
         "空港股份",
         "康达新材",
         // "北汽蓝谷",
