上传组件支持非图片文件

--- a/gp.html
+++ b/gp.html
@@ -129,19 +129,19 @@
       tPrice: "",
       gpList: [
         {
-          name: "铜牛信息",
-          buyPrice: 35.58,
-          buyNumber: 13300
+          name: "中能电气",
+          buyPrice: 6.11,
+          buyNumber: 81100
         }
       ],
       myList: [
+        "铜牛信息",
         "中文在线",
         // "初灵信息",
         "首都在线",
         // "创意信息",
         "博雅生物",
         // "华民股份",
-        // "中能电气",
         // "方正科技",
         "空港股份",
         "康达新材",
