--- a/gp.html
+++ b/gp.html
@@ -137,15 +137,15 @@
       myList: [
         "铜牛信息",
         "中文在线",
-        // "初灵信息",
+        "初灵信息",
         "首都在线",
-        // "创意信息",
-        "博雅生物",
-        // "华民股份",
-        // "方正科技",
+        "创意信息",
+        "方正科技",
         "空港股份",
         "康达新材",
-        // "北汽蓝谷",
+        "北汽蓝谷",
+        "博雅生物",
+        // "华民股份",
         // '星微股份',
         // '恒辉安防',
         // '沃森生物',
