--- a/gp.html
+++ b/gp.html
@@ -145,11 +145,11 @@
         "北汽蓝谷",
         "空港股份",
         "方正科技",
-        // "华民股份",
-        // '星微股份',
-        // '恒辉安防',
-        // '沃森生物',
-        // '华体科技',
+        "华民股份",
+        '星微股份',
+        '恒辉安防',
+        '沃森生物',
+        '华体科技',
       ]
     },
     created() {
