--- a/gp.html
+++ b/gp.html
@@ -129,9 +129,9 @@
       tPrice: "",
       gpList: [
         {
-          name: "中能电气",
-          buyPrice: 6.11,
-          buyNumber: 81100
+          name: "华民股份",
+          buyPrice: 8.843,
+          buyNumber: 50000
         }
       ],
       myList: [
@@ -145,8 +145,8 @@
         "北汽蓝谷",
         "空港股份",
         "方正科技",
-        "华民股份",
         '星微股份',
+        '中能电气',
         '恒辉安防',
         '沃森生物',
         '华体科技',
