--- a/gp.html
+++ b/gp.html
@@ -129,24 +129,24 @@
       tPrice: "",
       gpList: [
         {
-          name: "华民股份",
-          buyPrice: 8.843,
-          buyNumber: 50000
+          name: "中能电气",
+          buyPrice: 6.47,
+          buyNumber: 70400
         }
       ],
       myList: [
-        "铜牛信息",
         "中文在线",
+        "康达新材",
+        "方正科技",
+        "铜牛信息",
+        "创意信息",
         "初灵信息",
         "首都在线",
-        "创意信息",
         "博雅生物",
-        "康达新材",
         "北汽蓝谷",
         "空港股份",
-        "方正科技",
         '星微股份',
-        '中能电气',
+        '华民股份',
         '恒辉安防',
         '沃森生物',
         '华体科技',
