--- a/gp.html
+++ b/gp.html
@@ -129,23 +129,23 @@
       tPrice: "",
       gpList: [
         {
-          name: "中能电气",
-          buyPrice: 6.269,
-          buyNumber: 76400
+          name: "创意信息",
+          buyPrice: 14.589,
+          buyNumber: 33300
         }
       ],
       myList: [
         "康达新材",
-        "星微股份",
         "方正科技",
         "北汽蓝谷",
-        "空港股份",
         "中文在线",
         "华民股份",
+        "星微股份",
         "初灵信息",
         "铜牛信息",
         "首都在线",
-        "创意信息",
+        "中能电气",
+        "空港股份",
         "恒辉安防",
         "博雅生物",
         "沃森生物",
