--- a/gp.html
+++ b/gp.html
@@ -146,10 +146,10 @@
         "铜牛信息",
         "首都在线",
         "空港股份",
-        "恒辉安防",
         "博雅生物",
         "沃森生物",
-        "华体科技"
+        "华体科技",
+        "恒辉安防"
       ]
     },
     created() {
