--- a/gp.html
+++ b/gp.html
@@ -129,22 +129,23 @@
       tPrice: "",
       gpList: [
         {
-          name: "创意信息",
-          buyPrice: 14.589,
-          buyNumber: 33300
+          name: "中文在线",
+          buyPrice: 33.753,
+          buyNumber: 13000
         }
       ],
       myList: [
         "康达新材",
-        "方正科技",
         "北汽蓝谷",
-        "华民股份",
         "星微股份",
         "中能电气",
-        "中文在线",
+        "华民股份",
+        "方正科技",
+        // "中文在线",
         "初灵信息",
         "铜牛信息",
         "首都在线",
+        "创意信息",
         "空港股份",
         "博雅生物",
         "沃森生物",
